import { screen } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { useId } from '../../hooks/use-id';
import { renderWithProviders } from '../../test-utils/renderer';
import { Disclosure, type DisclosureButtonProps } from './disclosure';

jest.mock('../../hooks/use-id');

describe('Disclosure', () => {
    const content = 'content';
    const buttonTypes = [
        {
            describeName: 'Button',
            props: {
                buttonType: 'primary',
                label: 'disclose content',
            } as DisclosureButtonProps,
            name: 'disclose content',
        },
        {
            describeName: 'IconButton',
            props: {
                iconName: 'home',
                buttonType: 'primary',
                label: 'disclose content',
            } as DisclosureButtonProps,
            name: 'disclose content',
        },
    ];

    beforeEach(() => {
        jest.mocked(useId).mockImplementation((id) => id || 'mock-id');
    });

    buttonTypes.forEach(({
        describeName,
        props: buttonProps,
        name,
    }) => {
        describe(describeName, () => {
            it('matches the snapshot when collapsed', () => {
                const { asFragment } = renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );

                expect(asFragment()).toMatchSnapshot();
            });

            it('matches the snapshot when expanded', async () => {
                const user = userEvent.setup();
                const { asFragment } = renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );

                const button = screen.getByRole('button', { name });
                await user.click(button);

                expect(asFragment()).toMatchSnapshot();
            });

            it('renders a button', () => {
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );

                expect(screen.getByRole('button', { name })).toBeInTheDocument();
                expect(document.getElementById('mock-id')).not.toBeInTheDocument();
            });

            it('calls useId to generated content id', () => {
                const someId = 'someId';
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps} idContent={someId}>{content}</Disclosure>,
                );

                expect(useId).toHaveBeenCalledWith(someId);
            });

            it('sets div content id to id generated by useId', async () => {
                const user = userEvent.setup();
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );

                const button = screen.getByRole('button', { name });
                await user.click(button);

                expect(document.getElementById('mock-id')).toBeInTheDocument();
            });

            it('sets button aria-controls to id generated by useId', () => {
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );

                const button = screen.getByRole('button', { name });
                expect(button).toHaveAttribute('aria-controls', 'mock-id');
            });

            it('toggles expanded state when button is clicked', async () => {
                const user = userEvent.setup();
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );
                const button = screen.getByRole('button', { name });

                expect(button).toHaveAttribute('aria-expanded', 'false');

                await user.click(button);
                expect(button).toHaveAttribute('aria-expanded', 'true');

                await user.click(button);
                expect(button).toHaveAttribute('aria-expanded', 'false');
            });

            it('does not render content container when button has not been clicked yet', () => {
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );

                expect(document.getElementById('mock-id')).not.toBeInTheDocument();
            });

            it('does not render children content when button has not been clicked yet', () => {
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );

                expect(screen.queryByText(content)).not.toBeInTheDocument();
            });

            it('renders container when button is clicked', async () => {
                const user = userEvent.setup();
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );
                const button = screen.getByRole('button', { name });
                await user.click(button);

                const container = document.getElementById('mock-id');
                expect(container).toBeInTheDocument();
                expect(container).toBeVisible();
            });

            it('removes content when button loses focus', async () => {
                const user = userEvent.setup();
                const { container } = renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );
                const button = screen.getByRole('button', { name });
                await user.click(button);

                expect(document.getElementById('mock-id')).toBeInTheDocument();

                await user.click(container);

                expect(document.getElementById('mock-id')).not.toBeInTheDocument();
            });

            it('renders content container after button is clicked', async () => {
                const user = userEvent.setup();
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );
                const button = screen.getByRole('button', { name });
                await user.click(button);

                expect(document.getElementById('mock-id')).toBeInTheDocument();
            });

            it('renders children content after button is clicked', async () => {
                const user = userEvent.setup();
                renderWithProviders(
                    <Disclosure buttonProps={buttonProps}>{content}</Disclosure>,
                );
                const button = screen.getByRole('button', { name });
                await user.click(button);

                expect(screen.getByText(content)).toBeInTheDocument();
            });
        });
    });
});
